<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="393dp"
        android:layout_height="251dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"

        android:src="@drawable/auth_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="3dp"
        android:gravity="top"
        android:text="*"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView511"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:letterSpacing="-0.01"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:text="@string/text_reset_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarForgot" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarForgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/auth_toolbar_circle_left_24"
        app:navigationIconTint="@color/green"
        app:title="@string/regis_toolbar_back"
        app:titleTextColor="@color/green" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/text_reset_subtitle"
        android:textSize="16sp"
        android:translationY="-2.08sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView511" />

    <EditText
        android:id="@+id/edInputForgotPhone"
        android:layout_width="363dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/auth_input_border"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/edtext_input_phone_number"
        android:inputType="phone"


        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/text_input_phone_number"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/edInputForgotPhone"
        app:layout_constraintStart_toStartOf="@+id/edInputForgotPhone" />

    <Button
        android:id="@+id/btSendSms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/green"
        android:text="@string/bt_reset_send_sms"
        app:layout_constraintEnd_toEndOf="@+id/edInputForgotPhone"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/edInputForgotPhone"
        app:layout_constraintTop_toBottomOf="@+id/edInputForgotPhone" />

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/progressBarBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progressBarBackColor"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="10dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </eightbitlab.com.blurview.BlurView>


</androidx.constraintlayout.widget.ConstraintLayout>